<resources>
    <string name="app_name">WhoBorrowedThat?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_borrow_lent_list">BorrowLentListActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="borrowed">Borrowed</string>
    <string name="lent">Lent</string>
    <string name="todo">TODO</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log in</string>
    <string name="who_borrowed_that">WHO BORROWED THAT?</string>
    <string name="how_many">how many</string>
    <string name="days_left">days left</string>
    <string name="who_borrowed_that_lower">Who Borrowed That?</string>
    <string name="make_photo">make photo</string>
    <string name="lent_to">lent to</string>
    <string name="add_new_item">ADD NEW ITEM</string>
    <string name="add_new_renttal">ADD NEW RENTTAL</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="username">username</string>
    <string name="email_addres">email addres</string>
    <string name="password">password</string>
    <string name="password_confirmation">password confirmation</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_value">Sign Up</string>
    <string name="pick_a_date">pick a date</string>
    <string name="show_date">show date</string>
    <string name="rental_date">rental date</string>
    <string name="pick_a_date">pick a date</string>
    <string name="show_date">show date</string>
    <string name="return_date">return date</string>
    <string name="item">item</string>
    <string name="add_new_rental">ADD NEW RENTAL</string>
    <string name="add_new_item">ADD NEW ITEM</string>
    <string name="lent_to">lent to</string>
    <string name="make_photo">make photo</string>
    <string name="from_gallery">from gallery</string>
    <string name="change_dates">Change dates</string>
    <string name="item_is_returned">Item is returned</string>
    <string name="send_a_reminder">Send a reminder</string>
    <string name="to">to</string>
    <string name="you_lent">You lent</string>
    <string name="who_borrowed">who borrowed</string>
    <string name="item">item</string>
    <string name="return_date_capitalized">Return date</string>
    <string name="return_date">return date</string>
    <string name="lent_lower">lent</string>
    <string name="lent_date">Lent date</string>
    <string name="you_borrowed">You borrowed</string>
    <string name="from">from</string>
    <string name="ask_for_extension">Ask for extension</string>
    <string name="lent_from_who">lent from who</string>
    <string name="item">item</string>
    <string name="return_date">return date</string>
    <string name="return_date_title">Return date</string>
    <string name="borrow_date">borrow date</string>
    <string name="borrow_date_title">Borrow date</string>
    <string name="search">search</string>
    <string name="type_email_here">Type email here...</string>
    <string name="add_friend">+ ADD FRIEND</string>
</resources>
